--- a/packages/context/package.json
+++ b/packages/context/package.json
@@ -1,10 +1,11 @@
 {
     "name": "@openland/context",
     "description": "Context is a library for easy context passing",
-    "version": "0.1.1",
+    "version": "0.1.2",
     "main": "lib/index.js",
     "typings": "lib/index.d.ts",
     "repository": "https://github.com/openland/context",
     "author": "Steve Kite <steve@openland.com>",
-    "license": "MIT"
+    "license": "MIT",
+    "gitHead": "43edd994ebfa9e9dded3889d64c6fe28faa3e900"
 }
